# clipboard-workbench

./: .gitignore  PROJECT_SHOWCASE.md  README.md  create-shortcut.ps1  index.html  mini.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  mini.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clean_db.rs  clipboard.rs  db.rs  lib.rs  main.rs  tray.rs
src/components/: ContextMenu.tsx  DetailPanel.tsx  FloatingPanel.tsx  HistoryItem.tsx  MiniWindow.tsx  SearchBar.tsx  SettingsPanel.tsx  ShortcutCapture.tsx  Sidebar.tsx  TextViewer.tsx  Titlebar.tsx
