[package]
name = "clipboard-workbench"
version = "0.1.0"
description = "A local clipboard workbench"
authors = ["user"]
edition = "2021"

[lib]
name = "clipboard_workbench_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
image = "0.25"
sha2 = "0.10"
chrono = "0.4"
