[package]
name = "copybox"
version = "0.1.0"
description = "CopyBox - A local clipboard manager"
authors = ["user"]
edition = "2021"
default-run = "copybox"

[lib]
name = "copybox_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "clean_db"
path = "src/clean_db.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
image = "0.25"
sha2 = "0.10"
chrono = "0.4"
rfd = "0.15"
base64 = "0.22"
